--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "test:e2e": "vue-cli-service test:e2e"
+    "test:e2e": "json-server -d 1500 --watch db-test.json & vue-cli-service test:e2e",
+    "backend": "json-server -d 1500 --watch db.json"
   },
   "dependencies": {
     "axios": "^0.18.0",
