--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "test:e2e": "json-server -d 1500 --watch db-test.json & vue-cli-service test:e2e",
+    "travis": "json-server -d 1500 --watch db-test.json & vue-cli-service test:e2e --headless",
     "backend": "json-server -d 1500 --watch db.json"
   },
   "dependencies": {
@@ -29,6 +30,7 @@
     "cypress-vue-unit-test": "^1.11.0",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
+    "json-server": "^0.14.2",
     "vue-template-compiler": "^2.5.21"
   }
 }
